--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "App shell",
-  "name": "App shell",
+  "short_name": "Close5 Lite",
+  "name": "Close5 Lite",
   "start_url": "./?utm_source=web_app_manifest",
   "icons": [{
         "src": "images/icon-128x128.png",
@@ -25,6 +25,6 @@
       }],
   "display": "standalone",
   "orientation": "portrait",
-  "background_color": "#3E4EB8",
-  "theme_color": "#2E3AA1"
+  "background_color": "#e2393d",
+  "theme_color": "#ab2629"
 }
